# voter-pipeline

./: .gitignore  pyproject.toml
docker/cc-run/: Dockerfile
lib/: voter.py
lib/export/: base_export.py  queries.py  sp_export.py
lib/scraper/: base_vote_scraper.py  clark_nv_vote_scraper.py  queries.py  washoe_nv_vote_scraper.py
lib/utils/: data.py  files.py
lib/voter/: voter.py
test/test_export/: test_base_export.py  test_sp_export.py
test/test_scraper/: test_base_vote_scraper.py  test_clark_nv_vote_scraper.py  test_washoe_nv_vote_scraper.py
test/test_utils/: test_data.py  test_files.py
test/test_voter/: test_voter.py
utils/: data.py  files.py
