# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voter-pipeline"
description = "TBD"
license = {text = "TBD"}
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "civis",
  "os",
  "python-csv",
  "requests",
  "tempfile",
  "uhlibs",
  "zipfile"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "requests-mock"
]

[tool.setuptools]
py-modules = ["lib"]
script-files = [
  "bin/install",
]

[tool.setuptools.dynamic]
version = {file = "bin/VERSION"}

[tool.setuptools.packages.find]
include = ["bin"]

[tool.coverage.report]
skip_empty = true  # exclude empty __init__.py files from report
show_missing = true  # include missing lines in coverage report

[project.urls]
"Homepage" = "https://dev.azure.com/unitehereiu/Unite%20Here%20Development/_git/voter-pipeline"
